#---------------------------------------------------------------------------
# Ganbo : テレビチューナーサーバー mirakurun  のクライアント
#---------------------------------------------------------------------------
# 更新履歴
#   1.2     2025/02/01  バージョンが変わったことを示すために配色変更
#                       録画前に放送時刻を確認するルーチンを追加 <- mirakurun が情報を更新していれば機能する
#                       URL(の形)を変更
#                       週間番組表を８日間表示にした
#                       番組情報の拡張情報を1000文字から1500文字に変更
#                       g92.search_programs()にあった、SQLインジェクションを対策した（key_wordのサニタイジングをしていなかった）
#   1.1     2025/01/01  バージョンが変わったことを示すために配色変更
#                       EPE8を参考にソースファイルを整形
#                       ソースファイルの整形をautopep8にした。ただし1行は200文字 "autopep8.args": ["--max-line-length", "200"],
#                       タブをスペース4つに変更
#                       エンコーディング宣言を削除
#                       import順を整理
#                       その他はautopep8に任せた
#                       Environment()でautoescape=Trueとして、テンプレートファイルでの指示をなくした
#                       録画予約の優先順位をなくした
#                       ログ出力の調整
#                       設定のテンプレートを改変
#                       終了・新番組の時間帯条件を削除
#                       @app.get('/')を削除し、get_programs_daily()関数のデコレータを @router.get('/')とした
#                       録画マージンの設定がすぐに効かないバグ修正
#                       UPSERTのときに、リストにないデータの削除
#                       主演などの区切りを半角スペースにした
#                       自動予約設定ルーチン群を見直した
#                       compose.ymlのversionを削除した
#                       番組表から番組情報を消した
#   1.0     2024/07/01  初期バージョン
#   0.1     2024/02/28  とりあえず動くα版
#---------------------------------------------------------------------------