@@ -60,6 +60,11 @@
 	イメージ作成後は`docker compose start`で起動できます。<br>
 	docker image  作成時に、必要なソフトをダウンロードして実行環境を整えています。
 
+## アップデート
+app ディレクトリ以下をすべて入れ替えてください。<br>
+Ganbo を止める必要はありません。<br>
+ソースファイルを入れ替えると、サーバーが自動で再起動して、プログラムの更新が終わります。
+
 ## アンインストール
 1. dockerコンテナ、イメージの削除<br>
 	compose.ymlのあるディレクトリで、
