@@ -1,4 +1,4 @@
-FROM mariadb:11.2.2
+FROM mariadb:11.4
 
 #TimeZoneをJSTにする
 # https://zenn.dev/mtmatma/articles/7d561577f1fc46 (2025/01/13)
