@@ -2,6 +2,8 @@
 # Ganbo : テレビチューナーサーバー mirakurun  のクライアント
 #---------------------------------------------------------------------------
 # 更新履歴
+#           2025/09/13  番組情報に制御文字があったときの対策 json.loads(response.text, strict=False)
+#                       引っ張ってくるdockerイメージのバージョンを 2025/09/13 現在に合わせた
 #   1.2     2025/02/01  バージョンが変わったことを示すために配色変更
 #                       録画前に放送時刻を確認するルーチンを追加 <- mirakurun が情報を更新していれば機能する
 #                       URL(の形)を変更
